# Okteta

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/Okteta/: AbstractByteArrayModel.hpp  AbstractByteArrayModelPrivate.hpp  AddressRange.hpp  AddressRangeList.hpp  ArrayChangeMetrics.hpp  ArrayChangeMetricsList.hpp  Bookmark.hpp  BookmarkList.hpp  BookmarkListConstIteratorAdapter.hpp  Bookmarkable.hpp  BookmarksConstIterator.hpp  BookmarksConstIteratorAdapter.hpp  ByteArrayChange.hpp  ByteArrayModel.hpp  ByteArrayModelPrivate.hpp  ChangeHistory.hpp  CharCodec.hpp  Character.hpp  FileByteArrayModel.hpp  FileByteArrayModelPrivate.hpp  FixedSizeByteArrayModel.hpp  NullModel.hpp  NumberRange.hpp  PieceTableByteArrayModel.hpp  PieceTableByteArrayModelPrivate.hpp  TextByteArrayAnalyzer.hpp  ValueCodec.hpp
core/include/Okteta/Codecs/: BinaryByteCodec.hpp  DecimalByteCodec.hpp  EBCDIC1047CharCodec.hpp  HexadecimalByteCodec.hpp  IBM874CharCodec.hpp  JISX0201CharCodec.hpp  OctalByteCodec.hpp  TextCharCodec.hpp  USASCIICharCodec.hpp
core/include/Okteta/PieceTable/: AbstractPieceTableChange.hpp  GroupPieceTableChange.hpp  InsertPieceTableChange.hpp  Piece.hpp  PieceList.hpp  PieceTable.hpp  PieceTableChangeHistory.hpp  RemovePieceTableChange.hpp  ReplacePieceTableChange.hpp  RevertablePieceTable.hpp  SwapRangesPieceTableChange.hpp
core/src/: AbstractByteArrayModel.cpp  AddressRangeList.cpp  BookmarkList.cpp  BookmarkListConstIteratorAdapter.cpp  ByteArrayModel.cpp  ByteArrayModelPrivate.cpp  FileByteArrayModel.cpp  FileByteArrayModelPrivate.cpp  FixedSizeByteArrayModel.cpp  NullModel.cpp  OktetaCore.cpp  PieceTableByteArrayModel.cpp  PieceTableByteArrayModelPrivate.cpp  TextByteArrayAnalyzer.cpp
core/src/Codecs/: BinaryByteCodec.cpp  CharCodec.cpp  DecimalByteCodec.cpp  EBCDIC1047CharCodec.cpp  HexadecimalByteCodec.cpp  IBM874CharCodec.cpp  JISX0201CharCodec.cpp  OctalByteCodec.cpp  TextCharCodec.cpp  USASCIICharCodec.cpp  ValueCodec.cpp
core/src/PieceTable/: AbstractPieceTableChange.cpp  GroupPieceTableChange.cpp  InsertPieceTableChange.cpp  PieceList.cpp  PieceTable.cpp  PieceTableChangeHistory.cpp  RemovePieceTableChange.cpp  ReplacePieceTableChange.cpp  RevertablePieceTable.cpp  SwapRangesPieceTableChange.cpp
gui/: CMakeLists.txt
gui/include/Okteta/: AbstractByteArrayColumnRenderer.hpp  AbstractByteArrayColumnRendererPrivate.hpp  AbstractByteArrayView.hpp  AbstractByteArrayViewPrivate.hpp  BorderColumnRenderer.hpp  BorderColumnRendererPrivate.hpp  ByteArrayColumnView.hpp  ByteArrayColumnViewPrivate.hpp  ByteArrayRowColumnRenderer.hpp  ByteArrayRowColumnRendererPrivate.hpp  ByteArrayRowView.hpp  ByteArrayRowViewPrivate.hpp  ByteArrayTableCursor.hpp  ByteArrayTableLayout.hpp  ByteArrayTableRanges.hpp  ByteArrayTableRangesPrivate.hpp  CharByteArrayColumnRenderer.hpp  CharByteArrayColumnRendererPrivate.hpp  ColorScheme.hpp  ColorSchemeHelpersPrivate.hpp  Coord.hpp  CoordRange.hpp  CoordRangeList.hpp  Cursor.hpp  GlobalConfigStorage.hpp  Helper.hpp  LinePositionRange.hpp  LineRange.hpp  OffsetColumnRenderer.hpp  OffsetColumnRendererPrivate.hpp  OffsetFormat.hpp  OktetaGui.hpp  Selection.hpp  ValueByteArrayColumnRenderer.hpp  ValueByteArrayColumnRendererPrivate.hpp  WidgetColumnStylist.hpp  WidgetColumnStylistPrivate.hpp
gui/include/Okteta/Colors/: kcolorspaces_p.h  kcolorutils.h  kguiaddons_colorhelpers_p.h
gui/include/Okteta/Controller/: AbstractEditor.hpp  CharEditor.hpp  ClipboardController.hpp  Dropper.hpp  KeyNavigator.hpp  MouseNavigator.hpp  MousePaster.hpp  TabController.hpp  UndoRedoController.hpp  ValueEditor.hpp  ZoomWheelController.hpp
gui/include/Okteta/LibColumnsView/: AbstractColumnRenderer.hpp  AbstractColumnRendererPrivate.hpp  AbstractColumnStylist.hpp  AbstractColumnStylistPrivate.hpp  ColumnsView.hpp  ColumnsViewPrivate.hpp  PixelMetrics.hpp
gui/src/: AbstractByteArrayColumnRenderer.cpp  AbstractByteArrayColumnRendererPrivate.cpp  AbstractByteArrayView.cpp  AbstractByteArrayViewPrivate.cpp  BorderColumnRenderer.cpp  BorderColumnRendererPrivate.cpp  ByteArrayColumnView.cpp  ByteArrayColumnViewPrivate.cpp  ByteArrayRowColumnRenderer.cpp  ByteArrayRowColumnRendererPrivate.cpp  ByteArrayRowView.cpp  ByteArrayRowViewPrivate.cpp  ByteArrayTableCursor.cpp  ByteArrayTableLayout.cpp  ByteArrayTableRanges.cpp  CharByteArrayColumnRenderer.cpp  CharByteArrayColumnRendererPrivate.cpp  ColorScheme.cpp  CoordRangeList.cpp  Cursor.cpp  GlobalConfigStorage.cpp  OffsetColumnRenderer.cpp  OffsetColumnRendererPrivate.cpp  OffsetFormat.cpp  OktetaGui.cpp  ValueByteArrayColumnRenderer.cpp  ValueByteArrayColumnRendererPrivate.cpp  WidgetColumnStylist.cpp
gui/src/Colors/: KColorSpaces.cpp  KColorUtils.cpp
gui/src/Controller/: AbstractController.cpp  AbstractEditor.cpp  AbstractMouseController.cpp  AbstractWheelController.cpp  CharEditor.cpp  ClipboardController.cpp  Dropper.cpp  KeyNavigator.cpp  MouseNavigator.cpp  MousePaster.cpp  TabController.cpp  TapNavigator.cpp  TouchOnlyTapAndHoldGesture.cpp  TouchOnlyTapAndHoldGestureRecognizer.cpp  UndoRedoController.cpp  ValueEditor.cpp  ZoomPinchController.cpp  ZoomWheelController.cpp
gui/src/LibColumnsView/: AbstractColumnRenderer.cpp  AbstractColumnStylist.cpp  ColumnsView.cpp  ColumnsViewPrivate.cpp
